Partial fix for issue #311 (message text gets cut off) - this is for the related bug I found, documented in that issue thread.

--- a/pylowiki/public/styles/civ.css
+++ b/pylowiki/public/styles/civ.css
@@ -96,6 +96,10 @@ html,body{
     margin-top:20px;
 }
 
+.message-avatar{
+    min-width: 70px;
+}
+
 .fullWidth{ width:100%; }
 
 .horizontal-list> li {
